unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/Financial_Advisor_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Financial Advisor Team Member</label>
    <nameField>
        <displayFormat>FATM-{0000}</displayFormat>
        <label>Financial Advisor Team Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Advisor Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>