unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Associate_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Associate_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you do not have an Associate Advisor on your team, this person will receive tasks assigned to the Associate Advisor.</inlineHelpText>
    <label>Associate Advisor</label>
    <type>Checkbox</type>
</CustomField>