unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you do not have a CSA on your team, this person will receive tasks assigned to the CSA.</inlineHelpText>
    <label>CSA</label>
    <type>Checkbox</type>
</CustomField>