unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Draft_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Draft_Paperwork__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the person on your team who will draft all paperwork.</inlineHelpText>
    <label>Draft Paperwork</label>
    <type>Checkbox</type>
</CustomField>