unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W2 Employee</fullName>
            </value>
            <value>
                <fullName>1099 Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>