unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/FA_Team_Related_Advisors__c.field-meta.xml
<CustomField>
    <fullName>FA_Team_Related_Advisors__c</fullName>
    <formula>Financial_Advisor_Team__r.Related_Advisors__c</formula>
    <label>FA Team Related Advisors</label>
    <type>Text</type>
</CustomField>