unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Financial Advisor Team Members</relationshipLabel>
    <relationshipName>Financial_Advisor_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>