unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Group_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Id__c</fullName>
    <label>Group Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>