unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operations</label>
    <type>Checkbox</type>
</CustomField>