unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Branch Member</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Associate Advisor</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
                <isActive>false</isActive>
                <label>Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>