unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Send_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Send_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the person on your team who will send email notifications to clients, you, outside managers, and custodians.</inlineHelpText>
    <label>Send Notifications</label>
    <type>Checkbox</type>
</CustomField>