unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Suppress_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Notifications</label>
    <type>Checkbox</type>
</CustomField>