unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/Trading__c.field-meta.xml
<CustomField>
    <fullName>Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the person on your team who will enter trades.</inlineHelpText>
    <label>Trading</label>
    <type>Checkbox</type>
</CustomField>