unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/User_is_Active__c.field-meta.xml
<CustomField>
    <fullName>User_is_Active__c</fullName>
    <formula>User__r.IsActive</formula>
    <label>User is Active</label>
    <type>Checkbox</type>
</CustomField>