unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>User__r.FirstName + &#39; &#39; +User__r.LastName</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>