unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/fields/User_SSN__c.field-meta.xml
<CustomField>
    <fullName>User_SSN__c</fullName>
    <label>User SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>