unpackaged/main/default/objects/Financial_Advisor_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>User__c</columns>
    <columns>Group_Member_Id__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>